# vita

./: .env  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  HISTORY.md  README.md  XL2TIMES_CHANGES.md  package-lock.json  package.json  pyproject.toml  sankey.html
.beads/: .beads-credential-key  .gitignore  README.md  config.yaml  issues.jsonl  last-touched  metadata.json  push-state.json  sync_base.jsonl
.github/workflows/: solver-known-answer.yml
docs/: LLM_DOCS.md  migration_guide_toy_refactor.md
docs/prds/: 20260108-vedalang-heuristic-presolver.prd.txt  20260223-vedalang-emissions-as-attributes.prd.txt  20260305-facility-fuel-switching-modes-prd.txt  20260305-vedalang-core-abstraction-role-variant-mode-provider-scope-v1.prd.txt  20260307-vedalang-v0.2.prd.txt  20260317-aemo-mvp-v1.prd.md  20260317-aemo-mvp-v2.prd.md  20260317-aemo-mvp-v3.prd.md  20260317-aemo-mvp-v5.prd.md  20260317-aemo-mvp-v6.prd.md  20260317-repo-hygiene-audit.md  20260317-repo-hygiene-post-split.md  20260318-repo-hygiene-audit.md  20260318-vita-agentic-experiment-loop.prd.md  repo_hygiene_2026_03.md
docs/project-status/: STATUS.md
docs/reference/: 20260113-vedalang-naming-matters.prd.txt  20260115-vedalang-syntax.prd.txt  vedalang.prd.txt
docs/vedalang-design-agent/: README.md  SKILL.md  abstraction_v2_implementation_plan.md  baseline_diagnostics.md  canonical_form.md  ergonomic_improvements.md  exploration_prompt.md  facility_modes.md  iis_diagnostics.md  known_answer_tests.md  minisystem_spec.md  pattern_validation.md  schema_evolution.md
docs/vedalang-user/: LLMS.md  README.md  attribute_mapping.md  heuristics.md  known_answer_catalog.md  modeling-conventions.md  toy_industry_experiment_notes.md  toy_industry_vita_explainer.html  tutorial.md
rules/: README.md  __init__.py  constraints.yaml  patterns.yaml
rules/monetary/: README.md  fx_aud_usd_world_bank_pa_nus_fcrf.yaml
skills/vedalang/: SKILL.md
tests/: conftest.py  test_artifacts.py  test_backend_bridge.py  test_backend_symbols.py  test_cases_diagnostics.py  test_cli_presentation.py  test_conventions_sync.py  test_demands.py  test_diagnostic_integration.py  test_eval_framework.py  test_examples_catalog.py  test_experiment_manifest.py  test_experiment_presentation.py  test_experiment_runner.py  test_experiment_state.py  test_experiment_summary.py  test_experiment_validation.py  test_facilities.py  test_fmt_cli.py  test_gams_diagnostics.py  test_golden_fixtures.py  test_graph_builder.py  test_heuristics.py  test_identity_parser.py  test_identity_registry.py  test_ir.py  test_known_answer_core.py  test_known_answer_reference.py  test_llm_assessment.py  test_llm_categories.py  test_llm_unit_check.py  test_lsp.py  test_minisystem_fixtures.py  test_minisystem_golden.py  test_naming.py  test_naming_lint.py  test_online_compat.py  test_patterns_expand.py  test_prd_acceptance.py  test_prompt_registry.py  (+53 more)
tmp/: model.tableir.yaml  sankey.html  scenario_gams_diagnostics.json  xl2times_diagnostics.json  xl2times_manifest.json
tools/: cli_ui.py  compare_other_indexes.py  convert_attribute_master.py  sync_conventions.py  sync_status.py
veda/: veda-attribute-master-export.xlsx  veda-tags-and-columns-master-export.xlsx
vedalang/: cli.py  conventions.py  version.py  versioning.py
vita/: __init__.py  cli.py  diff.py  experiment_manifest.py  experiment_presentation.py  experiment_runner.py  experiment_state.py  experiment_summary.py  experiment_validation.py  handlers.py  project_init.py  run_artifacts.py  starter_catalog.py  version.py
xl2times/: XL2TIMES_CHANGES.md  main.py  transforms.py  utils.py
(+387 files in other folders)
