[project]
name = "VITA"
version = "0.4.9"
description = "VITA is a toolkit for authoring, validating, running, and analyzing TIMES energy models, including the VedaLang DSL"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
    "tabulate>=0.9.0",
    "gitpython>=3.1.45",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "jinja2>=3.1.6",
    # xl2times dependencies
    "loguru>=0.7",
    "numpy>=1.26",
    "tqdm>=4.66",
    "more-itertools>=10.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "watchdog>=6.0.0",
    "openai>=2.21.0",
    "rich>=13.0",
    "pint>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vedalang = "vedalang.cli:main"
vedalang-dev = "tools.veda_dev.cli:main"
vita = "vita.cli:main"

[tool.setuptools.packages.find]
include = ["rules*", "tools*", "vedalang*", "vita*", "xl2times*"]

[tool.setuptools.package-data]
vedalang = [
    "schema/*.json",
    "schema/*.yaml",
    "identity/*.yaml",
    "lint/prompts/*/*/*.json",
    "lint/prompts/*/*/*.txt",
    "viz/static/*",
]
vita = [
    "templates/*.template",
    "templates/starter/*",
]
"xl2times.config" = [
    "*.json",
    "*.txt",
]
"xl2times.gams_scaffold" = [
    "*.gms",
    "*.opt",
    "*.run",
]
"tools.veda_dev" = [
    "evals/datasets/*.yaml",
]
rules = [
    "*.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["xl2times", "times"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# HTML templates contain long CSS/JS lines
"tools/veda_dev/sankey.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s --tb=short --strict-markers -ra"
markers = [
  "solver: tests that require full TIMES/GAMS solver execution",
  "solver_fast: deterministic solver-backed subset for PR fast-tier CI",
  "solver_full: complete solver-backed suite for scheduled/manual CI",
]
